--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -9,3 +9,18 @@
     border-radius: 8px;
   }
   
+  @media only screen and (max-width: 450px) {
+
+    .myclass{
+      width: 250px;
+      height: 300px;
+      align-items: center;
+      justify-content: center;
+      align-self: center;
+
+    }
+    .myclass>canvas{
+      width: 220px;
+      height: 250px;
+    }
+  }
